fix: add box-shadow on tablet share panel and remove desktop duplicate

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -277,6 +277,7 @@ a {
         right: -35%;
         top: -83px;
         left: auto;
+        box-shadow: 0px 10px 10px rgba(201, 213, 225, 0.503415);
 
         &::after {
             content: "";
